@@ -1,6 +1,7 @@
 package dev.alex.threadium.render.modelpart.material;
 
 import com.google.common.collect.ImmutableList;
+import dev.alex.threadium.mixin.accessor.RenderLayerAccessor;
 import dev.alex.threadium.mixin.accessor.RenderLayerMultiPhaseAccessor;
 import dev.alex.threadium.mixin.accessor.RenderLayerMultiPhaseParametersAccessor;
 import dev.alex.threadium.mixin.accessor.RenderPhaseTextureAccessor;
@@ -10,7 +11,7 @@ import net.minecraft.client.render.RenderLayer;
 import net.minecraft.util.Identifier;
 
 /**
- * Exact Minecraft 1.21.1 descriptor for the first replacement-safe material subset.
+ * Exact Minecraft 1.20.1 descriptor for the first replacement-safe material subset.
  *
  * <p>The accepted shape is Vanilla {@code entity_cutout_no_cull} with a single non-blurred, non-mipmapped texture.
  * Every non-texture phase must be the same canonical phase object as Vanilla's template. Unknown, modded, wrapped,
@@ -18,7 +19,7 @@ import net.minecraft.util.Identifier;
  */
 public record RenderLayer1211Descriptor(
         RenderLayer layer, Identifier texture, ReplacementAdmissionPolicy admissionPolicy) {
-    private static final Identifier TEMPLATE_TEXTURE = Identifier.of("threadium", "replacement_probe");
+    private static final Identifier TEMPLATE_TEXTURE = new Identifier("threadium", "replacement_probe");
     private static final RenderLayer ENTITY_CUTOUT_NO_CULL_TEMPLATE =
             RenderLayer.getEntityCutoutNoCull(TEMPLATE_TEXTURE);
 
@@ -41,7 +42,7 @@ public record RenderLayer1211Descriptor(
                 inspection.exactSupportedLayer(),
                 inspection.texture() != null,
                 layer != null && layer.isOutline(),
-                layer != null && layer.isTranslucent(),
+                layer != null && ((RenderLayerAccessor) layer).threadium$isTranslucent(),
                 layer != null && layer.hasCrumbling());
         return new RenderLayer1211Descriptor(layer, inspection.texture(), policy);
     }
@@ -52,7 +53,8 @@ public record RenderLayer1211Descriptor(
                 || layer.getVertexFormat() != ENTITY_CUTOUT_NO_CULL_TEMPLATE.getVertexFormat()
                 || layer.getDrawMode() != ENTITY_CUTOUT_NO_CULL_TEMPLATE.getDrawMode()
                 || layer.hasCrumbling() != ENTITY_CUTOUT_NO_CULL_TEMPLATE.hasCrumbling()
-                || layer.isTranslucent() != ENTITY_CUTOUT_NO_CULL_TEMPLATE.isTranslucent()
+                || ((RenderLayerAccessor) layer).threadium$isTranslucent()
+                        != ((RenderLayerAccessor) ENTITY_CUTOUT_NO_CULL_TEMPLATE).threadium$isTranslucent()
                 || layer.isOutline() != ENTITY_CUTOUT_NO_CULL_TEMPLATE.isOutline()
                 || layer.getAffectedOutline().isPresent()
                         != ENTITY_CUTOUT_NO_CULL_TEMPLATE.getAffectedOutline().isPresent()) {
@@ -75,8 +77,8 @@ public record RenderLayer1211Descriptor(
         }
         Object actualTexturePhase = actual.threadium$getTexturePhase();
         Object templateTexturePhase = template.threadium$getTexturePhase();
-        if (actualPhases.getFirst() != actualTexturePhase
-                || templatePhases.getFirst() != templateTexturePhase
+        if (actualPhases.get(0) != actualTexturePhase
+                || templatePhases.get(0) != templateTexturePhase
                 || actualTexturePhase.getClass() != templateTexturePhase.getClass()) {
             return LayerInspection.unsupported();
         }
